--- a/volca-ui.html
+++ b/volca-ui.html
@@ -197,9 +197,9 @@
       rx="15.0188"
       ry="15"
       fill="#D9D9D9"
-      transform-origin="402.486 194"
-      transform="rotate(60)"
     ></ellipse>
+    <!-- transform-origin="402.486 194"
+    transform="rotate(60)" -->
     <mask
       id="mask13_16_65"
       style="mask-type: alpha"
@@ -225,8 +225,8 @@
         height="12"
         fill="#A09696"
         transform-origin="402.486 194"
-        transform="rotate(60)"
       ></rect>
+      <!-- transform="rotate(60)" -->
     </g>
   </g>
 
@@ -1394,17 +1394,18 @@
   <!-- ////////////////////////////////////////////////////////////////////////////////// -->
   <!-- Trigger Button Surfaces -->
   <g class="trigger-button-surfaces">
-    <rect
+    <!-- <rect
       x="249.294"
       y="344"
       width="30.0376"
       height="30"
       rx="3"
       fill="#D9D9D9"
-    ></rect>
+    ></rect> -->
     <rect
       x="249.294"
       y="344"
+      base-y="344"
       width="30.0376"
       height="30"
       rx="3"
@@ -1413,6 +1414,7 @@
     <rect
       x="289.344"
       y="344"
+      base-y="344"
       width="30.0376"
       height="30"
       rx="3"
@@ -1421,6 +1423,7 @@
     <rect
       x="329.394"
       y="344"
+      base-y="344"
       width="30.0376"
       height="30"
       rx="3"
@@ -1429,6 +1432,7 @@
     <rect
       x="369.444"
       y="344"
+      base-y="344"
       width="30.0376"
       height="30"
       rx="3"
@@ -1437,6 +1441,7 @@
     <rect
       x="409.494"
       y="344"
+      base-y="344"
       width="30.0376"
       height="30"
       rx="3"
@@ -1445,6 +1450,7 @@
     <rect
       x="449.545"
       y="344"
+      base-y="344"
       width="30.0376"
       height="30"
       rx="3"
@@ -1453,6 +1459,7 @@
     <rect
       x="489.595"
       y="344"
+      base-y="344"
       width="30.0376"
       height="30"
       rx="3"
@@ -1461,6 +1468,7 @@
     <rect
       x="529.645"
       y="344"
+      base-y="344"
       width="30.0376"
       height="30"
       rx="3"
@@ -1469,6 +1477,7 @@
     <rect
       x="249.294"
       y="393"
+      base-y="393"
       width="30.0376"
       height="30"
       rx="3"
@@ -1477,6 +1486,7 @@
     <rect
       x="289.344"
       y="393"
+      base-y="393"
       width="30.0376"
       height="30"
       rx="3"
@@ -1485,6 +1495,7 @@
     <rect
       x="329.394"
       y="393"
+      base-y="393"
       width="30.0376"
       height="30"
       rx="3"
@@ -1493,6 +1504,7 @@
     <rect
       x="369.444"
       y="393"
+      base-y="393"
       width="30.0376"
       height="30"
       rx="3"
@@ -1501,6 +1513,7 @@
     <rect
       x="409.494"
       y="393"
+      base-y="393"
       width="30.0376"
       height="30"
       rx="3"
@@ -1509,6 +1522,7 @@
     <rect
       x="449.545"
       y="393"
+      base-y="393"
       width="30.0376"
       height="30"
       rx="3"
@@ -1517,6 +1531,7 @@
     <rect
       x="489.595"
       y="393"
+      base-y="393"
       width="30.0376"
       height="30"
       rx="3"
@@ -1525,6 +1540,7 @@
     <rect
       x="529.645"
       y="393"
+      base-y="393"
       width="30.0376"
       height="30"
       rx="3"
@@ -2053,97 +2069,11 @@
       ></rect>
     </clipPath>
   </defs>
-  <!-- Code injected by live-server -->
-  <script type="text/javascript">
-    // &lt;-- For SVG support if ('WebSocket' in window) { (function () {
-    function refreshCSS() { var sheets =
-    [].slice.call(document.getElementsByTagName("link")); var head =
-    document.getElementsByTagName("head")[0]; for (var i = 0; i &lt;
-    sheets.length; ++i) { var elem = sheets[i]; var parent = elem.parentElement
-    || head; parent.removeChild(elem); var rel = elem.rel; if (elem.href
-    &amp;&amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() ==
-    "stylesheet") { var url = elem.href.replace(/(&amp;|\?)_cacheOverride=\d+/,
-    ''); elem.href = url + (url.indexOf('?') &gt;= 0 ? '&amp;' : '?') +
-    '_cacheOverride=' + (new Date().valueOf()); } parent.appendChild(elem); } }
-    var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-    var address = protocol + window.location.host + window.location.pathname +
-    '/ws'; var socket = new WebSocket(address); socket.onmessage = function
-    (msg) { if (msg.data == 'reload') window.location.reload(); else if
-    (msg.data == 'refreshcss') refreshCSS(); }; if (sessionStorage &amp;&amp;
-    !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-    console.log('Live reload enabled.');
-    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true); } })();
-    } else { console.error('Upgrade your browser. This Browser is NOT supported
-    WebSocket for Live-Reloading.'); } //
-  </script>
-  <!-- Code injected by live-server -->
-  <script type="text/javascript">
-    // &lt;-- For SVG support if ('WebSocket' in window) { (function () {
-    function refreshCSS() { var sheets =
-    [].slice.call(document.getElementsByTagName("link")); var head =
-    document.getElementsByTagName("head")[0]; for (var i = 0; i &lt;
-    sheets.length; ++i) { var elem = sheets[i]; var parent = elem.parentElement
-    || head; parent.removeChild(elem); var rel = elem.rel; if (elem.href
-    &amp;&amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() ==
-    "stylesheet") { var url = elem.href.replace(/(&amp;|\?)_cacheOverride=\d+/,
-    ''); elem.href = url + (url.indexOf('?') &gt;= 0 ? '&amp;' : '?') +
-    '_cacheOverride=' + (new Date().valueOf()); } parent.appendChild(elem); } }
-    var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-    var address = protocol + window.location.host + window.location.pathname +
-    '/ws'; var socket = new WebSocket(address); socket.onmessage = function
-    (msg) { if (msg.data == 'reload') window.location.reload(); else if
-    (msg.data == 'refreshcss') refreshCSS(); }; if (sessionStorage &amp;&amp;
-    !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-    console.log('Live reload enabled.');
-    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true); } })();
-    } else { console.error('Upgrade your browser. This Browser is NOT supported
-    WebSocket for Live-Reloading.'); } //
-  </script>
-  <!-- Code injected by live-server -->
-  <script type="text/javascript">
-    // &lt;-- For SVG support if ('WebSocket' in window) { (function () {
-    function refreshCSS() { var sheets =
-    [].slice.call(document.getElementsByTagName("link")); var head =
-    document.getElementsByTagName("head")[0]; for (var i = 0; i &lt;
-    sheets.length; ++i) { var elem = sheets[i]; var parent = elem.parentElement
-    || head; parent.removeChild(elem); var rel = elem.rel; if (elem.href
-    &amp;&amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() ==
-    "stylesheet") { var url = elem.href.replace(/(&amp;|\?)_cacheOverride=\d+/,
-    ''); elem.href = url + (url.indexOf('?') &gt;= 0 ? '&amp;' : '?') +
-    '_cacheOverride=' + (new Date().valueOf()); } parent.appendChild(elem); } }
-    var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-    var address = protocol + window.location.host + window.location.pathname +
-    '/ws'; var socket = new WebSocket(address); socket.onmessage = function
-    (msg) { if (msg.data == 'reload') window.location.reload(); else if
-    (msg.data == 'refreshcss') refreshCSS(); }; if (sessionStorage &amp;&amp;
-    !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-    console.log('Live reload enabled.');
-    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true); } })();
-    } else { console.error('Upgrade your browser. This Browser is NOT supported
-    WebSocket for Live-Reloading.'); } //
-  </script>
-
-  <!-- Code injected by live-server -->
-  <script type="text/javascript">
-    // &lt;-- For SVG support if ('WebSocket' in window) { (function () {
-    function refreshCSS() { var sheets =
-    [].slice.call(document.getElementsByTagName("link")); var head =
-    document.getElementsByTagName("head")[0]; for (var i = 0; i &lt;
-    sheets.length; ++i) { var elem = sheets[i]; var parent = elem.parentElement
-    || head; parent.removeChild(elem); var rel = elem.rel; if (elem.href
-    &amp;&amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() ==
-    "stylesheet") { var url = elem.href.replace(/(&amp;|\?)_cacheOverride=\d+/,
-    ''); elem.href = url + (url.indexOf('?') &gt;= 0 ? '&amp;' : '?') +
-    '_cacheOverride=' + (new Date().valueOf()); } parent.appendChild(elem); } }
-    var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-    var address = protocol + window.location.host + window.location.pathname +
-    '/ws'; var socket = new WebSocket(address); socket.onmessage = function
-    (msg) { if (msg.data == 'reload') window.location.reload(); else if
-    (msg.data == 'refreshcss') refreshCSS(); }; if (sessionStorage &amp;&amp;
-    !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-    console.log('Live reload enabled.');
-    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true); } })();
-    } else { console.error('Upgrade your browser. This Browser is NOT supported
-    WebSocket for Live-Reloading.'); } //
-  </script>
 </svg>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.6.1/d3.min.js"
+  integrity="sha512-MefNfAGJ/pEy89xLOFs3V6pYPs6AmUhXJrRlydI/9wZuGrqxmrdQ80zKHUcyadAcpH67teDZcBeS6oMJLPtTqw=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+></script>
+<script src="volca-controls.js"></script>
