abstracted trigger button function to work with all buttons

--- a/volca-ui.html
+++ b/volca-ui.html
@@ -1393,7 +1393,7 @@
   </g>
   <!-- ////////////////////////////////////////////////////////////////////////////////// -->
   <!-- Trigger Button Surfaces -->
-  <g class="trigger-button-surfaces">
+  <g class="trigger button surfaces">
     <!-- <rect
       x="249.294"
       y="344"
@@ -1579,7 +1579,7 @@
 
   <!-- ////////////////////////////////////////////////////////////////////////////////// -->
   <!-- Drum Button Bottoms -->
-  <g class="drum buttom bottoms">
+  <g class="drum button bottoms">
     <rect
       x="289.344"
       y="281"
@@ -1629,11 +1629,12 @@
       fill="#7D7474"
     ></rect>
   </g>
-  <!-- Drum Button Surfaces -->
+
   <g class="drum button surfaces">
     <rect
       x="289.344"
       y="274"
+      base-y="274"
       width="30.0376"
       height="30"
       rx="3"
@@ -1642,6 +1643,7 @@
     <rect
       x="329.394"
       y="274"
+      base-y="274"
       width="30.0376"
       height="30"
       rx="3"
@@ -1650,6 +1652,7 @@
     <rect
       x="369.444"
       y="274"
+      base-y="274"
       width="30.0376"
       height="30"
       rx="3"
@@ -1658,6 +1661,7 @@
     <rect
       x="409.494"
       y="274"
+      base-y="274"
       width="30.0376"
       height="30"
       rx="3"
@@ -1666,6 +1670,7 @@
     <rect
       x="449.545"
       y="274"
+      base-y="274"
       width="30.0376"
       height="30"
       rx="3"
@@ -1674,6 +1679,7 @@
     <rect
       x="489.595"
       y="274"
+      base-y="274"
       width="30.0376"
       height="30"
       rx="3"
