--- a/volca-ui.html
+++ b/volca-ui.html
@@ -1567,14 +1567,56 @@
     <ellipse cx="464.563" cy="266" rx="9.01129" ry="9" fill="#7D7474"></ellipse>
     <ellipse cx="504.614" cy="266" rx="9.01129" ry="9" fill="#7D7474"></ellipse>
   </g>
-  <g class="effect buttons surfaces">
-    <!-- Effect Button Surfaces -->
-    <ellipse cx="304.363" cy="262" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
-    <ellipse cx="344.413" cy="262" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
-    <ellipse cx="384.463" cy="262" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
-    <ellipse cx="424.513" cy="262" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
-    <ellipse cx="464.563" cy="262" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
-    <ellipse cx="504.614" cy="262" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
+
+  <g class="effect button surfaces">
+    <ellipse
+      cx="304.363"
+      cy="262"
+      base-y="262"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
+    <ellipse
+      cx="344.413"
+      cy="262"
+      base-y="262"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
+    <ellipse
+      cx="384.463"
+      cy="262"
+      base-y="262"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
+    <ellipse
+      cx="424.513"
+      cy="262"
+      base-y="262"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
+    <ellipse
+      cx="464.563"
+      cy="262"
+      base-y="262"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
+    <ellipse
+      cx="504.614"
+      cy="262"
+      base-y="262"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
   </g>
 
   <!-- ////////////////////////////////////////////////////////////////////////////////// -->
