testing using modifier keys

--- a/volca-ui.html
+++ b/volca-ui.html
@@ -1748,13 +1748,54 @@
     <ellipse cx="504.614" cy="321" rx="9.01129" ry="9" fill="#7D7474"></ellipse>
   </g>
   <g class="choke button surfaces">
-    <!-- Choke Button Surface -->
-    <ellipse cx="304.363" cy="317" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
-    <ellipse cx="344.413" cy="317" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
-    <ellipse cx="384.463" cy="317" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
-    <ellipse cx="424.513" cy="317" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
-    <ellipse cx="464.563" cy="317" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
-    <ellipse cx="504.614" cy="317" rx="9.01129" ry="9" fill="#D9D9D9"></ellipse>
+    <ellipse
+      cx="304.363"
+      cy="317"
+      base-y="317"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
+    <ellipse
+      cx="344.413"
+      cy="317"
+      base-y="317"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
+    <ellipse
+      cx="384.463"
+      cy="317"
+      base-y="317"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
+    <ellipse
+      cx="424.513"
+      cy="317"
+      base-y="317"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
+    <ellipse
+      cx="464.563"
+      cy="317"
+      base-y="317"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
+    <ellipse
+      cx="504.614"
+      cy="317"
+      base-y="317"
+      rx="9.01129"
+      ry="9"
+      fill="#D9D9D9"
+    ></ellipse>
   </g>
   <!-- ////////////////////////////////////////////////////////////////////////////////// -->
   <!-- Local Decay Text -->
