key combo logic is working

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Volca Drum Clone</title>
   </head>
   <body>
-    <object data="./volca-ui.html">
-      Error: Object tag not supported in your browser
-    </object>
+    <object data="volca-ui.html"></object>
   </body>
 </html>
